fixed compatibility problem on firefox (:has() causing solar system crash...)

--- a/src/styles/solar-system.scss
+++ b/src/styles/solar-system.scss
@@ -182,7 +182,7 @@ $pluto: #FF8732;
     }
 }
 
-body :has(.solar-system-view) {
+body {
     overflow: hidden;
     background: black;
     height: 100vh;
